# babyagent

./: .gitignore  CONTEXT.md  README.md  SPEC.md  pyproject.toml
data_test/vectors/: chroma.sqlite3
docs/adr/: 0001-product-recommend-pipeline.md  0002-hermes-fork.md  0003-baby-profile-rules.md  0004-compression-dual-output.md
src/babyagent/: __init__.py  __main__.py  main.py
src/babyagent/config/: config.yaml.template  loader.py
src/babyagent/core/: __init__.py
src/babyagent/core/baby/: __init__.py  compression.py  profile.py
src/babyagent/core/db/: __init__.py  schema.py  unified_store.py
src/babyagent/core/models/: __init__.py
src/babyagent/core/pipeline/: __init__.py  health_diet.py  intent.py  product_recommend.py  rejection.py
src/babyagent/gateway/: __init__.py  baby_switch.py  command_parser.py  orchestrator.py  session_store.py
src/babyagent/web/: __init__.py  api.py  app.py
src/babyagent/web/templates/: babies.html  baby_detail.html  base.html  dashboard.html  employees.html  login.html  models.html  products.html  settings.html  weixin.html
